# tatami

./: CMakeLists.txt  Makefile  config.yaml  go.mod  go.sum  main.go  readme.md  run.fish  xinitrc
internal/cmd/: launch.go  root.go
internal/config/: parser.go
internal/constants/: constants.go
internal/wm/: handlers.go  helpers.go  keybindings.go  utils.go  wm.go
src/: main.cpp
